# dwg2terrain-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.json  mesh.highres.json  mesh.json
src/dwg2terrain/: __init__.py  cli.py  extract.py  mcp_server.py  mesh.py  models.py  oda.py  scan.py  settings.py
tests/: test_smoke.py
