[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dwg2terrain-mcp"
version = "0.1.0"
description = "MCP server and CLI for DWG to DXF contour extraction and Blender terrain mesh generation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "CastleBison" }
]
dependencies = [
  "ezdxf>=1.3.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "mcp>=1.10.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "twine>=5.1.1"
]

[project.scripts]
dwg2terrain = "dwg2terrain.cli:main"
dwg2terrain-mcp = "dwg2terrain.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dwg2terrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
